# stratix

./: .editorconfig  .gitignore  .pre-commit-config.yaml  AGENTS.md  CITATION.cff  CODE_OF_CONDUCT.md  CONTRIBUTING.md  LICENSE  PRD.md  README.md  cliff.toml  justfile  package-lock.json  pyproject.toml
.github/: CODEOWNERS  PULL_REQUEST_TEMPLATE.md  dependabot.yml
.github/ISSUE_TEMPLATE/: bug_report.md  feature_request.md
.github/workflows/: publish.yml  test.yml
biblio/: survey.md
docs/: api.rst  conf.py  index.rst  install.rst  sg_execution_times.rst
docs/_static/: custom.css
docs/_templates/partials/: webfonts.html
docs/agents/: domain.md  issue-tracker.md  triage-labels.md
docs/api/: index.rst
docs/examples/: index.rst  plot_example.codeobj.json  plot_example.ipynb  plot_example.py  plot_example.py.md5  plot_example.rst  searchindex  sg_execution_times.rst
docs/start/: index.rst
examples/: README.rst  plot_absorption.py  plot_ar_coating.py  plot_autodiff.py  plot_bragg_mirror.py  plot_fields.py  plot_fresnel.py  plot_si_ar_coating.py
recipe/: meta.yaml
src/stratix/: __about__.py  __init__.py  _autodiff.py  _convenience.py  _field.py  _result.py  _solve.py  _types.py  _version.py  log.py
src/stratix/methods/: _abeles.py  _admittance.py  _dtn.py  _smatrix.py
tests/: conftest.py  test_abeles.py  test_absorption.py  test_admittance.py  test_autodiff.py  test_both.py  test_convenience.py  test_dtn.py  test_field.py  test_package.py  test_smatrix.py  test_vectorized.py
